# psychological-operations

./: .gitignore  COCO.md  Cargo.toml  README.md  build.sh  clear-cache.sh  go.mod  go.sum  main.go  meta-top3.json  objectiveai.json  package-lock.json  package.json  publish_yc_psyops.py  publish_yc_scrapes.py  tsconfig.json  version.sh  yc-w22-ceos-with-rankings.json  yc-w22-ceos.json
psychological-operations-cli/: Cargo.toml  build.rs
psychological-operations-cli/assets/harness_smoke/: stdout.txt
psychological-operations-cli/assets/psyops_list_multiple_psyops/: stdout.txt
psychological-operations-cli/assets/psyops_run_multi_stage/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_one_of_multiple/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_query_fallback/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_for_you_queue/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_logprobs_swarm/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_pre_hydrated_posts/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_pre_queued_deliveries/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_stdout_target/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_stdout_target/.psychological-operations/: config.json
psychological-operations-cli/assets/psyops_run_with_vector_logprobs_swarm/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_x_target/: stderr.txt  stdout.txt
psychological-operations-cli/assets/psyops_run_with_x_target/.psychological-operations/: config.json
psychological-operations-cli/assets/targets_deliver_drains_queue/: stdout.txt
psychological-operations-cli/examples/: build_test_seed.rs  refresh-fixture-shas.rs
psychological-operations-cli/src/: config.rs  db.rs  error.rs  events.rs  input.rs  lib.rs  main.rs  playwright.rs  playwright_binary.rs  psyop.rs  publish.rs  run.rs  score.rs  scrape.rs  tweet.rs
psychological-operations-cli/src/agent/: intervention.rs  mod.rs  reply.rs
psychological-operations-cli/src/agent_max_attempts/: mod.rs
psychological-operations-cli/src/billing/: config.rs  mod.rs  setup.rs
psychological-operations-cli/src/chrome/: bundles.rs  paths.rs
psychological-operations-cli/src/chromium/: bundles.rs  extract.rs  launch.rs  native_host.rs  pinned.rs
psychological-operations-cli/src/config/: mod.rs
psychological-operations-cli/src/config/agent_timeout/: mod.rs
psychological-operations-cli/src/config/notifications/: mod.rs
psychological-operations-cli/src/config/notifications_cmd/: mod.rs
psychological-operations-cli/src/config/psyops/: mod.rs
psychological-operations-cli/src/config/scrapes/: mod.rs
psychological-operations-cli/src/ingest/: extract.rs  identity.rs  mod.rs  native_host.rs
psychological-operations-cli/src/invent/: mod.rs
psychological-operations-cli/src/notifications/: discord.rs  mod.rs
psychological-operations-cli/src/notifications/destinations/: discord.rs  exec.rs  file.rs  http.rs  json_body.rs  mod.rs  stderr.rs  stdout.rs  telegram.rs  websocket.rs
psychological-operations-cli/src/oauth/: setup.rs  tokens.rs
psychological-operations-cli/src/psyops/: browse.rs  filter.rs  for_you.rs  mod.rs  notifications.rs  psyop.rs  query.rs  run.rs  sort_by.rs  targets.rs
psychological-operations-cli/src/publish/: mod.rs
psychological-operations-cli/src/run/: mod.rs
psychological-operations-cli/src/scrapes/: agent_max_attempts.rs  agent_timeout.rs  chrome_profile.rs  mod.rs  notifications.rs  run.rs
psychological-operations-cli/src/targets/: mod.rs
psychological-operations-cli/src/targets/destinations/: file.rs  http.rs  json_body.rs  mod.rs  telegram.rs  websocket.rs  x.rs
psychological-operations-cli/src/x/: error.rs  http.rs  mock.rs  mod.rs  serde_helpers.rs
psychological-operations-cli/src/x/account_activity/: mod.rs
psychological-operations-cli/src/x/activity/: mod.rs
psychological-operations-cli/src/x/chat/: mod.rs
psychological-operations-cli/src/x/communities/: mod.rs
psychological-operations-cli/src/x/compliance/: mod.rs
psychological-operations-cli/src/x/connections/: delete.rs  get.rs  http.rs  mod.rs
psychological-operations-cli/src/x_app/: config.rs  setup.rs
psychological-operations-cli/tests/: harness_smoke.rs  psyops_run_multi_stage.rs  psyops_run_with_stdout_target.rs  psyops_run_with_x_target.rs
psychological-operations-cli/tests/common/: mod.rs  snapshot.rs
psychological-operations-evaluate/: .gitignore  CLAUDE.md  build.sh  fingerprint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.sh  validate.sh
psychological-operations-evaluate/psychological_operations_evaluate/: __init__.py
psychological-operations-mcp/: Cargo.toml
psychological-operations-mcp/src/: lib.rs  main.rs  psychological_operations.rs  run.rs
(+877 files in other folders)
