[package]
name = "psychological-operations-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "psychological-operations"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.35", features = ["bundled"] }
git2 = "0.20"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
