[package]
name = "psychological-operations-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "psychological-operations"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
rusqlite = { version = "0.39.0", features = ["bundled"] }
git2 = "0.20.4"
reqwest = { version = "0.13.2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
objectiveai = { path = "../objectiveai/objectiveai-rs", version = "2.0.0" }
indexmap = "2.14.0"
futures = "0.3.32"
