[package]
name = "psychological-operations-cli"
version = "0.99.0"
edition = "2024"

[[bin]]
name = "psychological-operations"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
rusqlite = { version = "0.31.0", features = ["bundled"] }
git2 = "0.20.4"
reqwest = { version = "0.13.2", features = ["json", "query"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
objectiveai = { path = "../objectiveai/objectiveai-rs", version = "2.0.4", default-features = false }
objectiveai-cli-sdk = { path = "../objectiveai/objectiveai-cli-sdk", version = "2.0.4" }
indexmap = "2.14.0"
futures = "0.3.32"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2.1.3"
url = { version = "2", features = ["serde"] }
serde_path_to_error = "0.1.20"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
tar = "0.4"
starlark = "0.13.0"
rand = "0.8"
base64 = "0.22"
envconfig = "0.11.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
# Integration tests open the per-test data.db for assertions.
rusqlite = { version = "0.31.0", features = ["bundled"] }
# Blocking download of the objectiveai release binary in the test
# harness (see tests/common/mod.rs::objectiveai_binary). Runtime deps
# above pull reqwest with async features; the blocking flavor is
# test-only. rustls-tls avoids dragging openssl-sys on Windows CI.
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
