[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "psychological-operations-evaluate"
version = "0.1.0"
description = "Evaluation pipelines for psychological-operations using ObjectiveAI + cocoindex"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Wiggidy" },
]
keywords = ["objectiveai", "cocoindex", "psychological-operations", "evaluation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "objectiveai==2.0.1",
  "cocoindex",
  "objectiveai-cocoindex==2.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["psychological_operations_evaluate"]

[tool.hatch.build.targets.sdist]
include = [
  "psychological_operations_evaluate/",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
