[package]
name = "psychological-operations-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dotenv = "0.15.0"
envconfig = "0.11.1"
psychological-operations-cli = { path = "../psychological-operations-cli", version = "0.1.0" }
rmcp = { version = "0.16.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
